# peewee_orm

./: README.md  main.py  notes.db  pyproject.toml
src/models/: BaseModel.py  Models.py
src/repository/: GroupRepository.py  PersonRepository.py
